Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,64 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Rải 3.000 tờ rơi quảng cáo 'cho vay, tiền góp', bị công an bắt đi lượm lại",
+    "content": "Vào sáng ngày 12-3, hai thanh niên đã bị Công an xã Mỹ Lâm, huyện Hòn Đất bắt quả tang khi đang rải khoảng 3.000 tờ rơi quảng cáo dịch vụ cho vay tiền tiêu dùng và tiền góp. Họ khai nhận đã nhận tiền công để phát tờ rơi từ một người đàn ông lạ. Công an đã yêu cầu hai người thu hồi lại các tờ rơi đã phát và sẽ xử lý theo quy định của pháp luật.",
+    "link": "https://tuoitre.vn/rai-3-000-to-roi-quang-cao-cho-vay-tien-gop-bi-cong-an-bat-di-luom-lai-20250313134004431.htm",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 6,
+    "question": "Tại sao hai thanh niên bị công an bắt khi phát tờ rơi?",
+    "answers": [
+      {
+        "text": "Họ phát tờ rơi quảng cáo cho vay tiền góp",
+        "correct": true
+      },
+      {
+        "text": "Họ phát tờ rơi quảng cáo thực phẩm",
+        "correct": false
+      },
+      {
+        "text": "Họ phát tờ rơi quảng cáo du lịch",
+        "correct": false
+      },
+      {
+        "text": "Họ phát tờ rơi quảng cáo điện thoại",
+        "correct": false
+      },
+      {
+        "text": "Họ phát tờ rơi quảng cáo dịch vụ sửa chữa",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thêm 3 Việt kiều về thi đấu V-League",
+    "content": "Ba cầu thủ Việt kiều gồm Damoth Thongkhamsavath, Mark Huynh và Kevin Pham Ba đã chính thức gia nhập các CLB thuộc V-League từ vòng 17 của mùa giải 2024-2025. Damoth, cầu thủ Lào, đầu quân cho Thanh Hóa, trong khi Mark, mang quốc tịch Mỹ, sẽ thi đấu cho Hải Phòng, còn Kevin, có nguồn gốc từ Pháp, gia nhập Nam Định. Các cầu thủ này hy vọng sẽ mang lại sức mạnh và chất lượng cho các đội bóng của họ trong phần còn lại của mùa giải.",
+    "link": "https://vnexpress.net/them-3-viet-kieu-ve-thi-dau-v-league-4860886.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Ai là ba cầu thủ Việt kiều mới gia nhập V-League?",
+    "answers": [
+      {
+        "text": "Damoth Thongkhamsavath, Mark Huynh và Kevin Pham Ba",
+        "correct": true
+      },
+      {
+        "text": "Nguyễn Công Phượng, Lương Xuân Trường và Nguyễn Văn Toàn",
+        "correct": false
+      },
+      {
+        "text": "Đặng Văn Lâm, Adriano Schmidt và Martin Lo",
+        "correct": false
+      },
+      {
+        "text": "Trần Minh Vương, Hendrio và Jason Quang Vinh",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Em bé lao ngang đường vào đầu ôtô",
     "content": "Vào tối ngày 12/3 tại Hải Phòng, một cậu bé bất ngờ lao qua đường và va chạm với ôtô đang di chuyển. Tình huống xảy ra trong điều kiện trời tối và tầm nhìn hạn chế, nhưng may mắn là tài xế đã kịp thời xử lý. Sau vụ va chạm, em bé đứng khóc giữa đường và không thấy người nhà đến đón. Bài viết nhấn mạnh tầm quan trọng của việc giám sát trẻ em khi chơi gần đường và lái xe cẩn thận trong khu vực nội đô.",
     "link": "https://vnexpress.net/em-be-lao-ngang-duong-vao-dau-oto-4860695.html",
@@ -1705,6 +1763,33 @@
     ]
   },
   {
+    "title": "Sản phụ mắc bệnh xương hóa đá hiếm gặp vượt cạn an toàn",
+    "content": "Chị Đinh Thanh Hương, 32 tuổi, mắc bệnh xương hóa đá hiếm gặp với tỷ lệ 1/200.000 người, đã vượt cạn an toàn nhờ sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc. Bệnh xương hóa đá khiến chị đối mặt với nhiều nguy cơ trong thai kỳ, nhưng nhờ vào kế hoạch chăm sóc cẩn thận và tư vấn tận tình, chị đã có một ca sinh nở thành công. Các bác sĩ đã thực hiện ca mổ với sự chính xác để đảm bảo an toàn cho cả mẹ và bé.",
+    "link": "https://vnexpress.net/san-phu-mac-benh-xuong-hoa-da-hiem-gap-vuot-can-an-toan-4859942.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Chị Đinh Thanh Hương đã vượt cạn an toàn nhờ vào đâu?",
+    "answers": [
+      {
+        "text": "Sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc.",
+        "correct": true
+      },
+      {
+        "text": "Sự động viên từ gia đình.",
+        "correct": false
+      },
+      {
+        "text": "Chế độ dinh dưỡng hợp lý.",
+        "correct": false
+      },
+      {
+        "text": "Nhờ vào thuốc giảm đau hiệu quả.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nồm ẩm làm tăng nguy cơ nhồi máu cơ tim",
     "content": "Thời tiết nồm ẩm có thể làm tăng nguy cơ nhồi máu cơ tim do ảnh hưởng đến sức khỏe tim mạch. Bác sĩ Nguyễn Tuấn Long cho biết, độ ẩm cao làm cơ thể phải làm việc nhiều hơn để duy trì nhiệt độ, dẫn đến căng thẳng cho hệ tim mạch. Số bệnh nhân nhồi máu cơ tim tại Bệnh viện Đa khoa Tâm Anh Hà Nội trong tháng 2 tăng gần 30% so với cùng kỳ năm ngoái, đặc biệt là ở những người có bệnh lý nền hoặc tuổi cao. Để giảm thiểu rủi ro, cần chú ý giữ ấm cơ thể và duy trì lối sống lành mạnh.",
     "link": "https://vnexpress.net/nom-am-lam-tang-nguy-co-nhoi-mau-co-tim-4860624.html",
@@ -1731,33 +1816,6 @@
       },
       {
         "text": "Nồm ẩm chỉ ảnh hưởng đến hệ hô hấp.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sản phụ mắc bệnh xương hóa đá hiếm gặp vượt cạn an toàn",
-    "content": "Chị Đinh Thanh Hương, 32 tuổi, mắc bệnh xương hóa đá hiếm gặp với tỷ lệ 1/200.000 người, đã vượt cạn an toàn nhờ sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc. Bệnh xương hóa đá khiến chị đối mặt với nhiều nguy cơ trong thai kỳ, nhưng nhờ vào kế hoạch chăm sóc cẩn thận và tư vấn tận tình, chị đã có một ca sinh nở thành công. Các bác sĩ đã thực hiện ca mổ với sự chính xác để đảm bảo an toàn cho cả mẹ và bé.",
-    "link": "https://vnexpress.net/san-phu-mac-benh-xuong-hoa-da-hiem-gap-vuot-can-an-toan-4859942.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Chị Đinh Thanh Hương đã vượt cạn an toàn nhờ vào đâu?",
-    "answers": [
-      {
-        "text": "Sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc.",
-        "correct": true
-      },
-      {
-        "text": "Sự động viên từ gia đình.",
-        "correct": false
-      },
-      {
-        "text": "Chế độ dinh dưỡng hợp lý.",
-        "correct": false
-      },
-      {
-        "text": "Nhờ vào thuốc giảm đau hiệu quả.",
         "correct": false
       }
     ]
@@ -1929,6 +1987,33 @@
     ]
   },
   {
+    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
+    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
+    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
+    "cat": "gia-dinh",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
+    "answers": [
+      {
+        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
+        "correct": true
+      },
+      {
+        "text": "Tất cả mọi người đều ủng hộ",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất này không có ý nghĩa gì",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bí quyết giúp mẹ ba con giảm 10 kg trong 90 ngày",
     "content": "Giang, 34 tuổi, đã giảm 10 kg trong 90 ngày nhờ vào chế độ ăn uống lành mạnh và tập luyện thể chất. Sau khi nhận thấy sự thay đổi tiêu cực về ngoại hình và sức khỏe, cô quyết định thay đổi lối sống bằng cách ăn đủ nhóm chất dinh dưỡng và tập luyện 5 ngày mỗi tuần. Kết quả, cân nặng của cô giảm từ 59 kg xuống còn 49 kg, vòng bụng thu gọn và sức khỏe được cải thiện rõ rệt. Giang hiện duy trì lối sống lành mạnh và cảm thấy tự tin hơn về bản thân.",
     "link": "https://vnexpress.net/bi-quyet-giup-me-ba-con-giam-10-kg-trong-90-ngay-4860179.html",
@@ -1955,33 +2040,6 @@
       },
       {
         "text": "150 ngày",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
-    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
-    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
-    "cat": "gia-dinh",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
-    "answers": [
-      {
-        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
-        "correct": true
-      },
-      {
-        "text": "Tất cả mọi người đều ủng hộ",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất này không có ý nghĩa gì",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
         "correct": false
       }
     ]
@@ -3165,37 +3223,6 @@
     ]
   },
   {
-    "title": "9 năm vô sinh do không có tinh trùng",
-    "content": "Anh Yeo, 51 tuổi, đã trải qua 9 năm vô sinh do không có tinh trùng và mới phát hiện nguyên nhân sau khi kết hôn. Sau khi khám tại Bệnh viện Đa khoa Tâm Anh TP HCM, anh được chẩn đoán với tình trạng teo tinh hoàn và được bác sĩ chỉ định điều trị bằng kỹ thuật micro-TESE để tìm tinh trùng. Kết quả là tìm thấy 15 tinh trùng, giúp anh và vợ thực hiện thụ tinh trong ống nghiệm và hiện tại họ đã có thai khoảng 8 tuần.",
-    "link": "https://vnexpress.net/9-nam-vo-sinh-do-khong-co-tinh-trung-4860218.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Nguyên nhân nào khiến anh Yeo vô sinh trong 9 năm qua?",
-    "answers": [
-      {
-        "text": "Không có tinh trùng do teo tinh hoàn",
-        "correct": true
-      },
-      {
-        "text": "Bị bệnh quai bị",
-        "correct": false
-      },
-      {
-        "text": "Thiếu dinh dưỡng",
-        "correct": false
-      },
-      {
-        "text": "Mắc bệnh tiểu đường",
-        "correct": false
-      },
-      {
-        "text": "Vấn đề tâm lý",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Người bệnh suy giáp nên giảm cân thế nào",
     "content": "Người bệnh suy giáp có thể giảm cân bằng cách tăng cường chất xơ, ưu tiên ăn nhiều trái cây và chọn protein cùng chất béo lành mạnh. Suy giáp làm chậm quá trình trao đổi chất, khiến việc giảm cân trở nên khó khăn hơn. Bổ sung chất xơ và rau quả không chỉ hỗ trợ giảm cân mà còn giúp duy trì sức khỏe tuyến giáp. Thêm vào đó, tập thể dục thường xuyên, ngủ đủ giấc và ăn uống lành mạnh đóng vai trò quan trọng trong quá trình giảm cân của người bệnh.",
     "link": "https://vnexpress.net/nguoi-benh-suy-giap-nen-giam-can-the-nao-4860368.html",
@@ -3245,6 +3272,37 @@
       },
       {
         "text": "Có, nhưng chỉ ăn trứng sống.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "9 năm vô sinh do không có tinh trùng",
+    "content": "Anh Yeo, 51 tuổi, đã trải qua 9 năm vô sinh do không có tinh trùng và mới phát hiện nguyên nhân sau khi kết hôn. Sau khi khám tại Bệnh viện Đa khoa Tâm Anh TP HCM, anh được chẩn đoán với tình trạng teo tinh hoàn và được bác sĩ chỉ định điều trị bằng kỹ thuật micro-TESE để tìm tinh trùng. Kết quả là tìm thấy 15 tinh trùng, giúp anh và vợ thực hiện thụ tinh trong ống nghiệm và hiện tại họ đã có thai khoảng 8 tuần.",
+    "link": "https://vnexpress.net/9-nam-vo-sinh-do-khong-co-tinh-trung-4860218.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Nguyên nhân nào khiến anh Yeo vô sinh trong 9 năm qua?",
+    "answers": [
+      {
+        "text": "Không có tinh trùng do teo tinh hoàn",
+        "correct": true
+      },
+      {
+        "text": "Bị bệnh quai bị",
+        "correct": false
+      },
+      {
+        "text": "Thiếu dinh dưỡng",
+        "correct": false
+      },
+      {
+        "text": "Mắc bệnh tiểu đường",
+        "correct": false
+      },
+      {
+        "text": "Vấn đề tâm lý",
         "correct": false
       }
     ]
@@ -3648,33 +3706,6 @@
     ]
   },
   {
-    "title": "9 loại rau quả làm mát cơ thể khi nắng nóng",
-    "content": "Trong thời tiết nắng nóng, việc bổ sung nước và chất điện giải là rất quan trọng để duy trì sức khỏe. Bài viết giới thiệu 9 loại rau quả giúp làm mát cơ thể, bao gồm nước dừa, dưa hấu, dưa chuột, rau lá xanh, và cam quýt. Những thực phẩm này không chỉ giàu nước mà còn cung cấp nhiều vitamin và khoáng chất thiết yếu, giúp cơ thể cân bằng và phòng tránh các vấn đề sức khỏe do nhiệt độ cao.",
-    "link": "https://vnexpress.net/9-loai-rau-qua-lam-mat-co-the-khi-nang-nong-4860366.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những loại rau quả nào giúp làm mát cơ thể khi nắng nóng?",
-    "answers": [
-      {
-        "text": "Nước dừa, dưa hấu, dưa chuột, rau lá xanh, cam quýt",
-        "correct": true
-      },
-      {
-        "text": "Cà chua, khoai tây, bí ngô",
-        "correct": false
-      },
-      {
-        "text": "Nho, chuối, xoài, dứa",
-        "correct": false
-      },
-      {
-        "text": "Bông cải xanh, khoai lang, hành tây",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Rau củ quả nào tốt cho não?",
     "content": "Bài viết nhấn mạnh rằng bên cạnh các thực phẩm như trứng, hải sản và thịt, rau củ quả cũng có vai trò quan trọng trong việc phát triển trí não của trẻ. Nhiều loại rau củ quả chứa chất dinh dưỡng cần thiết giúp thúc đẩy sự phát triển trí não, điều này thường bị bỏ qua trong chế độ ăn uống của trẻ. Việc bổ sung rau củ quả vào khẩu phần ăn của trẻ sẽ không chỉ giúp sức khỏe tổng thể mà còn hỗ trợ tốt cho sự phát triển trí tuệ.",
     "link": "https://vnexpress.net/rau-cu-qua-nao-tot-cho-nao-4860417.html",
@@ -3697,6 +3728,33 @@
       },
       {
         "text": "Chỉ một số loại rau củ mới tốt cho não.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "9 loại rau quả làm mát cơ thể khi nắng nóng",
+    "content": "Trong thời tiết nắng nóng, việc bổ sung nước và chất điện giải là rất quan trọng để duy trì sức khỏe. Bài viết giới thiệu 9 loại rau quả giúp làm mát cơ thể, bao gồm nước dừa, dưa hấu, dưa chuột, rau lá xanh, và cam quýt. Những thực phẩm này không chỉ giàu nước mà còn cung cấp nhiều vitamin và khoáng chất thiết yếu, giúp cơ thể cân bằng và phòng tránh các vấn đề sức khỏe do nhiệt độ cao.",
+    "link": "https://vnexpress.net/9-loai-rau-qua-lam-mat-co-the-khi-nang-nong-4860366.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những loại rau quả nào giúp làm mát cơ thể khi nắng nóng?",
+    "answers": [
+      {
+        "text": "Nước dừa, dưa hấu, dưa chuột, rau lá xanh, cam quýt",
+        "correct": true
+      },
+      {
+        "text": "Cà chua, khoai tây, bí ngô",
+        "correct": false
+      },
+      {
+        "text": "Nho, chuối, xoài, dứa",
+        "correct": false
+      },
+      {
+        "text": "Bông cải xanh, khoai lang, hành tây",
         "correct": false
       }
     ]
@@ -4432,64 +4490,6 @@
       },
       {
         "text": "Cô không thích phong cách nam tính.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Mỹ chính thức áp thuế 25% lên nhôm và thép nhập khẩu",
-    "content": "Mỹ đã chính thức áp thuế 25% lên toàn bộ nhôm và thép nhập khẩu từ ngày 12-3. Quyết định này được đưa ra nhằm bảo vệ ngành sản xuất thép và nhôm trong nước, khi mà các miễn trừ và hạn ngạch trước đó đã hết hiệu lực. Các nhà sản xuất thép Mỹ hoan nghênh động thái này, tuy nhiên, nó cũng đã khiến nhiều quốc gia như Canada, Brazil và Hàn Quốc bị ảnh hưởng lớn, khi trước đây họ được hưởng các mức miễn trừ.",
-    "link": "https://tuoitre.vn/my-chinh-thuc-ap-thue-25-len-nhom-va-thep-nhap-khau-20250312131724714.htm",
-    "cat": "kinh-doanh",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Mỹ đã áp thuế bao nhiêu phần trăm lên nhôm và thép nhập khẩu?",
-    "answers": [
-      {
-        "text": "25%",
-        "correct": true
-      },
-      {
-        "text": "10%",
-        "correct": false
-      },
-      {
-        "text": "15%",
-        "correct": false
-      },
-      {
-        "text": "30%",
-        "correct": false
-      },
-      {
-        "text": "20%",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sáp nhập tỉnh thành, người dân có phải đổi giấy tờ, sổ đỏ mới?",
-    "content": "Bài viết đề cập đến việc sáp nhập tỉnh thành và xã tại Việt Nam, trong đó giải đáp thắc mắc của người dân về việc có cần phải đổi các giấy tờ như căn cước và sổ đỏ hay không. Theo quy định mới, giấy tờ đã được cấp trước khi sáp nhập vẫn có giá trị sử dụng cho đến khi hết thời hạn hoặc bị sửa đổi. Người dân không bị yêu cầu đổi giấy tờ nếu chúng chưa hết hiệu lực, nhưng có thể đổi nếu có nhu cầu.",
-    "link": "https://tuoitre.vn/sap-nhap-tinh-thanh-nguoi-dan-co-phai-doi-giay-to-so-do-moi-20250312135043795.htm",
-    "cat": "phap-luat",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Người dân có cần đổi giấy tờ sau khi sáp nhập tỉnh thành không?",
-    "answers": [
-      {
-        "text": "Không, giấy tờ vẫn có giá trị sử dụng đến hết thời hạn.",
-        "correct": true
-      },
-      {
-        "text": "Có, tất cả giấy tờ đều phải đổi.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần đổi sổ đỏ.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần đổi thẻ căn cước.",
         "correct": false
       }
     ]
