--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Cô gái mang lệnh truy nã nguy hiểm đang chuẩn bị trốn sang Campuchia thì bị bắt",
+    "content": "Ngày 13-3, Công an Đà Nẵng đã bắt giữ Đặng Ý Nhi, một cô gái mang lệnh truy nã nguy hiểm, khi cô đang chuẩn bị trốn sang Campuchia. Nhi đã bị TAND quận Sơn Trà tuyên phạt 7 năm tù về tội tổ chức sử dụng trái phép chất ma túy và bỏ trốn từ tháng 8-2024. Sau khi nhận được thông tin, tổ công tác của phòng cảnh sát đã phối hợp với công an địa phương vây bắt Nhi tại TP.HCM.",
+    "link": "https://tuoitre.vn/co-gai-mang-lenh-truy-na-nguy-hiem-dang-chuan-bi-tron-sang-campuchia-thi-bi-bat-20250313142552314.htm",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 7,
+    "question": "Cô gái Đặng Ý Nhi bị bắt giữ vì lý do gì?",
+    "answers": [
+      {
+        "text": "Mang lệnh truy nã về tội tổ chức sử dụng trái phép chất ma túy",
+        "correct": true
+      },
+      {
+        "text": "Trốn thuế",
+        "correct": false
+      },
+      {
+        "text": "Giết người",
+        "correct": false
+      },
+      {
+        "text": "Buôn bán ma túy",
+        "correct": false
+      },
+      {
+        "text": "Lừa đảo",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Rải 3.000 tờ rơi quảng cáo 'cho vay, tiền góp', bị công an bắt đi lượm lại",
     "content": "Vào sáng ngày 12-3, hai thanh niên đã bị Công an xã Mỹ Lâm, huyện Hòn Đất bắt quả tang khi đang rải khoảng 3.000 tờ rơi quảng cáo dịch vụ cho vay tiền tiêu dùng và tiền góp. Họ khai nhận đã nhận tiền công để phát tờ rơi từ một người đàn ông lạ. Công an đã yêu cầu hai người thu hồi lại các tờ rơi đã phát và sẽ xử lý theo quy định của pháp luật.",
     "link": "https://tuoitre.vn/rai-3-000-to-roi-quang-cao-cho-vay-tien-gop-bi-cong-an-bat-di-luom-lai-20250313134004431.htm",
@@ -134,6 +165,91 @@
       },
       {
         "text": "Trần Minh Vương, Hendrio và Jason Quang Vinh",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Suzuki Swift sắp trở lại Việt Nam, nhập khẩu Nhật Bản",
+    "content": "Mẫu xe Suzuki Swift thế hệ thứ 4 sẽ trở lại thị trường Việt Nam và được nhập khẩu trực tiếp từ Nhật Bản, dự kiến ra mắt vào cuối quý II năm 2025. Các đại lý hiện đang nhận cọc từ khách hàng và xe đã về cảng để làm thủ tục thông quan. So với phiên bản trước, Swift mới có một số cải tiến về thiết kế, đặc biệt là khoang lái, mặc dù kích thước tổng thể gần như không thay đổi.",
+    "link": "https://vnexpress.net/suzuki-swift-sap-tro-lai-viet-nam-nhap-khau-nhat-ban-4860834.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Khi nào Suzuki Swift sẽ trở lại Việt Nam?",
+    "answers": [
+      {
+        "text": "Cuối quý II năm 2025",
+        "correct": true
+      },
+      {
+        "text": "Cuối năm 2024",
+        "correct": false
+      },
+      {
+        "text": "Giữa năm 2025",
+        "correct": false
+      },
+      {
+        "text": "Đầu năm 2025",
+        "correct": false
+      },
+      {
+        "text": "Đầu quý IV năm 2025",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sở Y tế TP HCM: Cảnh giác với 'cò' giấy phép hành nghề y, dược",
+    "content": "Sở Y tế TP HCM đã phát hiện nhiều trang mạng quảng cáo dịch vụ làm giấy phép hành nghề y dược giả mạo và đã chuyển thông tin đến Công an TP HCM để điều tra. Giám đốc Sở Y tế, Tăng Chí Thượng, khẳng định rằng các trang này không thuộc về Sở và khuyến cáo người dân nên cẩn trọng khi tiếp xúc với các dịch vụ này. Người dân được hướng dẫn thực hiện các thủ tục hành chính qua Cổng thông tin điện tử của Sở và có thể báo cáo với đường dây nóng nếu phát hiện hoạt động ôm \"cò\".",
+    "link": "https://vnexpress.net/so-y-te-tp-hcm-canh-giac-voi-co-giay-phep-hanh-nghe-y-duoc-4860655.html",
+    "cat": "phap-luat",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Sở Y tế TP HCM cảnh báo về vấn đề gì?",
+    "answers": [
+      {
+        "text": "Các trang quảng cáo dịch vụ giấy phép hành nghề y dược giả mạo.",
+        "correct": true
+      },
+      {
+        "text": "Dịch vụ khám chữa bệnh miễn phí.",
+        "correct": false
+      },
+      {
+        "text": "Giấy phép hành nghề y dược hợp pháp.",
+        "correct": false
+      },
+      {
+        "text": "Các phòng khám không có giấy phép.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "'Thánh ăn' Tiktok qua đời ở tuổi 24",
+    "content": "Efecan Kultur, một KOL nổi tiếng với các video 'mukbang' trên TikTok, đã qua đời ở tuổi 24 do các vấn đề sức khỏe liên quan đến cân nặng. Efecan đã phải nhập viện vì không thể đứng dậy và gặp khó khăn trong việc thở, và cuối cùng đã qua đời vào ngày 7 tháng 3 sau khi điều trị không hiệu quả. Anh được biết đến với phong cách ăn uống thả ga, thu hút 155.000 người theo dõi trên nền tảng này, và cái chết của anh một lần nữa dấy lên lo ngại về sự nguy hiểm của trào lưu mukbang.",
+    "link": "https://vnexpress.net/thanh-an-tiktok-qua-doi-o-tuoi-24-4860825.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao Efecan Kultur qua đời ở tuổi 24?",
+    "answers": [
+      {
+        "text": "Do các vấn đề sức khỏe liên quan đến cân nặng.",
+        "correct": true
+      },
+      {
+        "text": "Bị tai nạn giao thông.",
+        "correct": false
+      },
+      {
+        "text": "Bị bệnh truyền nhiễm.",
+        "correct": false
+      },
+      {
+        "text": "Do sử dụng chất cấm.",
         "correct": false
       }
     ]
@@ -1920,33 +2036,6 @@
     ]
   },
   {
-    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
-    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
-    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
-    "cat": "gia-dinh",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
-    "answers": [
-      {
-        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
-        "correct": true
-      },
-      {
-        "text": "Tất cả mọi người đều ủng hộ",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất này không có ý nghĩa gì",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bí quyết giúp mẹ ba con giảm 10 kg trong 90 ngày",
     "content": "Giang, 34 tuổi, đã giảm 10 kg trong 90 ngày nhờ vào chế độ ăn uống lành mạnh và tập luyện thể chất. Sau khi nhận thấy sự thay đổi tiêu cực về ngoại hình và sức khỏe, cô quyết định thay đổi lối sống bằng cách ăn đủ nhóm chất dinh dưỡng và tập luyện 5 ngày mỗi tuần. Kết quả, cân nặng của cô giảm từ 59 kg xuống còn 49 kg, vòng bụng thu gọn và sức khỏe được cải thiện rõ rệt. Giang hiện duy trì lối sống lành mạnh và cảm thấy tự tin hơn về bản thân.",
     "link": "https://vnexpress.net/bi-quyet-giup-me-ba-con-giam-10-kg-trong-90-ngay-4860179.html",
@@ -1973,6 +2062,33 @@
       },
       {
         "text": "150 ngày",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
+    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
+    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
+    "cat": "gia-dinh",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
+    "answers": [
+      {
+        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
+        "correct": true
+      },
+      {
+        "text": "Tất cả mọi người đều ủng hộ",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất này không có ý nghĩa gì",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
         "correct": false
       }
     ]
@@ -3156,6 +3272,37 @@
     ]
   },
   {
+    "title": "9 năm vô sinh do không có tinh trùng",
+    "content": "Anh Yeo, 51 tuổi, đã trải qua 9 năm vô sinh do không có tinh trùng và mới phát hiện nguyên nhân sau khi kết hôn. Sau khi khám tại Bệnh viện Đa khoa Tâm Anh TP HCM, anh được chẩn đoán với tình trạng teo tinh hoàn và được bác sĩ chỉ định điều trị bằng kỹ thuật micro-TESE để tìm tinh trùng. Kết quả là tìm thấy 15 tinh trùng, giúp anh và vợ thực hiện thụ tinh trong ống nghiệm và hiện tại họ đã có thai khoảng 8 tuần.",
+    "link": "https://vnexpress.net/9-nam-vo-sinh-do-khong-co-tinh-trung-4860218.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Nguyên nhân nào khiến anh Yeo vô sinh trong 9 năm qua?",
+    "answers": [
+      {
+        "text": "Không có tinh trùng do teo tinh hoàn",
+        "correct": true
+      },
+      {
+        "text": "Bị bệnh quai bị",
+        "correct": false
+      },
+      {
+        "text": "Thiếu dinh dưỡng",
+        "correct": false
+      },
+      {
+        "text": "Mắc bệnh tiểu đường",
+        "correct": false
+      },
+      {
+        "text": "Vấn đề tâm lý",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Người bệnh suy giáp nên giảm cân thế nào",
     "content": "Người bệnh suy giáp có thể giảm cân bằng cách tăng cường chất xơ, ưu tiên ăn nhiều trái cây và chọn protein cùng chất béo lành mạnh. Suy giáp làm chậm quá trình trao đổi chất, khiến việc giảm cân trở nên khó khăn hơn. Bổ sung chất xơ và rau quả không chỉ hỗ trợ giảm cân mà còn giúp duy trì sức khỏe tuyến giáp. Thêm vào đó, tập thể dục thường xuyên, ngủ đủ giấc và ăn uống lành mạnh đóng vai trò quan trọng trong quá trình giảm cân của người bệnh.",
     "link": "https://vnexpress.net/nguoi-benh-suy-giap-nen-giam-can-the-nao-4860368.html",
@@ -3205,37 +3352,6 @@
       },
       {
         "text": "Có, nhưng chỉ ăn trứng sống.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "9 năm vô sinh do không có tinh trùng",
-    "content": "Anh Yeo, 51 tuổi, đã trải qua 9 năm vô sinh do không có tinh trùng và mới phát hiện nguyên nhân sau khi kết hôn. Sau khi khám tại Bệnh viện Đa khoa Tâm Anh TP HCM, anh được chẩn đoán với tình trạng teo tinh hoàn và được bác sĩ chỉ định điều trị bằng kỹ thuật micro-TESE để tìm tinh trùng. Kết quả là tìm thấy 15 tinh trùng, giúp anh và vợ thực hiện thụ tinh trong ống nghiệm và hiện tại họ đã có thai khoảng 8 tuần.",
-    "link": "https://vnexpress.net/9-nam-vo-sinh-do-khong-co-tinh-trung-4860218.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Nguyên nhân nào khiến anh Yeo vô sinh trong 9 năm qua?",
-    "answers": [
-      {
-        "text": "Không có tinh trùng do teo tinh hoàn",
-        "correct": true
-      },
-      {
-        "text": "Bị bệnh quai bị",
-        "correct": false
-      },
-      {
-        "text": "Thiếu dinh dưỡng",
-        "correct": false
-      },
-      {
-        "text": "Mắc bệnh tiểu đường",
-        "correct": false
-      },
-      {
-        "text": "Vấn đề tâm lý",
         "correct": false
       }
     ]
@@ -3639,33 +3755,6 @@
     ]
   },
   {
-    "title": "Rau củ quả nào tốt cho não?",
-    "content": "Bài viết nhấn mạnh rằng bên cạnh các thực phẩm như trứng, hải sản và thịt, rau củ quả cũng có vai trò quan trọng trong việc phát triển trí não của trẻ. Nhiều loại rau củ quả chứa chất dinh dưỡng cần thiết giúp thúc đẩy sự phát triển trí não, điều này thường bị bỏ qua trong chế độ ăn uống của trẻ. Việc bổ sung rau củ quả vào khẩu phần ăn của trẻ sẽ không chỉ giúp sức khỏe tổng thể mà còn hỗ trợ tốt cho sự phát triển trí tuệ.",
-    "link": "https://vnexpress.net/rau-cu-qua-nao-tot-cho-nao-4860417.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Rau củ quả có lợi cho sự phát triển trí não của trẻ không?",
-    "answers": [
-      {
-        "text": "Có, rau củ quả rất tốt cho não trẻ.",
-        "correct": true
-      },
-      {
-        "text": "Không, trẻ chỉ cần ăn thịt và hải sản.",
-        "correct": false
-      },
-      {
-        "text": "Rau củ quả không có tác dụng gì.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ một số loại rau củ mới tốt cho não.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "9 loại rau quả làm mát cơ thể khi nắng nóng",
     "content": "Trong thời tiết nắng nóng, việc bổ sung nước và chất điện giải là rất quan trọng để duy trì sức khỏe. Bài viết giới thiệu 9 loại rau quả giúp làm mát cơ thể, bao gồm nước dừa, dưa hấu, dưa chuột, rau lá xanh, và cam quýt. Những thực phẩm này không chỉ giàu nước mà còn cung cấp nhiều vitamin và khoáng chất thiết yếu, giúp cơ thể cân bằng và phòng tránh các vấn đề sức khỏe do nhiệt độ cao.",
     "link": "https://vnexpress.net/9-loai-rau-qua-lam-mat-co-the-khi-nang-nong-4860366.html",
@@ -3688,6 +3777,33 @@
       },
       {
         "text": "Bông cải xanh, khoai lang, hành tây",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Rau củ quả nào tốt cho não?",
+    "content": "Bài viết nhấn mạnh rằng bên cạnh các thực phẩm như trứng, hải sản và thịt, rau củ quả cũng có vai trò quan trọng trong việc phát triển trí não của trẻ. Nhiều loại rau củ quả chứa chất dinh dưỡng cần thiết giúp thúc đẩy sự phát triển trí não, điều này thường bị bỏ qua trong chế độ ăn uống của trẻ. Việc bổ sung rau củ quả vào khẩu phần ăn của trẻ sẽ không chỉ giúp sức khỏe tổng thể mà còn hỗ trợ tốt cho sự phát triển trí tuệ.",
+    "link": "https://vnexpress.net/rau-cu-qua-nao-tot-cho-nao-4860417.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Rau củ quả có lợi cho sự phát triển trí não của trẻ không?",
+    "answers": [
+      {
+        "text": "Có, rau củ quả rất tốt cho não trẻ.",
+        "correct": true
+      },
+      {
+        "text": "Không, trẻ chỉ cần ăn thịt và hải sản.",
+        "correct": false
+      },
+      {
+        "text": "Rau củ quả không có tác dụng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ một số loại rau củ mới tốt cho não.",
         "correct": false
       }
     ]
