Update generated content

--- a/home.html
+++ b/home.html
@@ -604,28 +604,28 @@
     ]
   },
   {
-    "title": "Đồng Nai khảo sát xây cầu, làm đường xuyên rừng kết nối Bình Phước",
-    "content": "Chính quyền Đồng Nai đã thực hiện khảo sát xây cầu Mã Đà và làm đường kết nối với Bình Phước sau nhiều lần từ chối dự án do lo ngại ảnh hưởng đến khu sinh quyển thế giới. Đoàn khảo sát đánh giá vị trí cầu và các đoạn đường đề xuất nâng cấp, với tổng mức đầu tư khoảng 5.130 tỷ đồng. Dự án này nhằm rút ngắn thời gian giao thương giữa hai tỉnh và kết nối với sân bay Long Thành và cảng Cái Mép - Thị Vải.",
-    "link": "https://vnexpress.net/dong-nai-khao-sat-xay-cau-lam-duong-xuyen-rung-ket-noi-binh-phuoc-4860840.html",
+    "title": "Đồng Nai khảo sát làm đường xuyên rừng kết nối Bình Phước",
+    "content": "Chính quyền Đồng Nai đã tiến hành khảo sát khu vực để xây dựng cầu Mã Đà, kết nối với tỉnh Bình Phước, sau nhiều lần từ chối dự án do lo ngại về tác động đến khu sinh quyển thế giới. Đoàn khảo sát đã xem xét các tuyến đường và vị trí xây cầu, nhằm phục vụ cho việc giao thương giữa hai tỉnh và kết nối với sân bay Long Thành và cảng Cái Mép. Tổng mức đầu tư cho dự án khôi phục cầu Mã Đà ước tính khoảng 5.130 tỷ đồng, với các phương án nhằm giảm thiểu ảnh hưởng đến môi trường.",
+    "link": "https://vnexpress.net/dong-nai-khao-sat-lam-duong-xuyen-rung-ket-noi-binh-phuoc-4860840.html",
     "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao Đồng Nai khảo sát xây cầu Mã Đà?",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Dự án xây cầu Mã Đà nhằm kết nối tỉnh nào với tỉnh nào?",
     "answers": [
       {
-        "text": "Để kết nối Bình Phước và giảm thời gian giao thương.",
+        "text": "Bình Phước và Đồng Nai",
         "correct": true
       },
       {
-        "text": "Để mở rộng khu bảo tồn thiên nhiên.",
+        "text": "Bình Dương và Đồng Nai",
         "correct": false
       },
       {
-        "text": "Để xây dựng một khu du lịch mới.",
+        "text": "Bình Phước và Tây Ninh",
         "correct": false
       },
       {
-        "text": "Để tăng cường an ninh vùng biên giới.",
+        "text": "Đồng Nai và Bà Rịa - Vũng Tàu",
         "correct": false
       }
     ]
@@ -2358,6 +2358,33 @@
     ]
   },
   {
+    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
+    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
+    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 7,
+    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
+    "answers": [
+      {
+        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
+        "correct": true
+      },
+      {
+        "text": "Vì không thích tập luyện",
+        "correct": false
+      },
+      {
+        "text": "Vì sức khỏe không tốt",
+        "correct": false
+      },
+      {
+        "text": "Vì muốn tiết kiệm tiền",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
     "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
     "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
@@ -2411,33 +2438,6 @@
       },
       {
         "text": "Cả hai bên đều phải bồi thường",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
-    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
-    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 7,
-    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
-    "answers": [
-      {
-        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
-        "correct": true
-      },
-      {
-        "text": "Vì không thích tập luyện",
-        "correct": false
-      },
-      {
-        "text": "Vì sức khỏe không tốt",
-        "correct": false
-      },
-      {
-        "text": "Vì muốn tiết kiệm tiền",
         "correct": false
       }
     ]
@@ -3339,6 +3339,33 @@
     ]
   },
   {
+    "title": "Ăn trứng khi mắc sốt xuất huyết có ảnh hưởng tiêu hóa?",
+    "content": "Trẻ mắc sốt xuất huyết có thể ăn trứng nhưng cần lưu ý đến tình trạng sức khỏe. Khi trẻ sốt cao, không nên cho trẻ ăn trứng vì hệ tiêu hóa có thể hoạt động kém và protein trong trứng có thể gây khó tiêu. Sau khi cơn sốt giảm và hệ tiêu hóa ổn định, trứng có thể được bổ sung vào chế độ ăn, nhưng cần chế biến cẩn thận và ăn vào buổi sáng để tốt cho tiêu hóa.",
+    "link": "https://vnexpress.net/an-trung-khi-mac-sot-xuat-huyet-co-anh-huong-tieu-hoa-4860513.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Có nên cho trẻ ăn trứng khi mắc sốt xuất huyết không?",
+    "answers": [
+      {
+        "text": "Có, nhưng chỉ khi trẻ không sốt cao.",
+        "correct": true
+      },
+      {
+        "text": "Không, tuyệt đối không nên cho ăn.",
+        "correct": false
+      },
+      {
+        "text": "Có, trẻ có thể ăn bất kỳ lúc nào.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ăn trứng sống.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "9 năm vô sinh do không có tinh trùng",
     "content": "Anh Yeo, 51 tuổi, đã trải qua 9 năm vô sinh do không có tinh trùng và mới phát hiện nguyên nhân sau khi kết hôn. Sau khi khám tại Bệnh viện Đa khoa Tâm Anh TP HCM, anh được chẩn đoán với tình trạng teo tinh hoàn và được bác sĩ chỉ định điều trị bằng kỹ thuật micro-TESE để tìm tinh trùng. Kết quả là tìm thấy 15 tinh trùng, giúp anh và vợ thực hiện thụ tinh trong ống nghiệm và hiện tại họ đã có thai khoảng 8 tuần.",
     "link": "https://vnexpress.net/9-nam-vo-sinh-do-khong-co-tinh-trung-4860218.html",
@@ -3392,33 +3419,6 @@
       },
       {
         "text": "Tránh ăn rau quả hoàn toàn.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ăn trứng khi mắc sốt xuất huyết có ảnh hưởng tiêu hóa?",
-    "content": "Trẻ mắc sốt xuất huyết có thể ăn trứng nhưng cần lưu ý đến tình trạng sức khỏe. Khi trẻ sốt cao, không nên cho trẻ ăn trứng vì hệ tiêu hóa có thể hoạt động kém và protein trong trứng có thể gây khó tiêu. Sau khi cơn sốt giảm và hệ tiêu hóa ổn định, trứng có thể được bổ sung vào chế độ ăn, nhưng cần chế biến cẩn thận và ăn vào buổi sáng để tốt cho tiêu hóa.",
-    "link": "https://vnexpress.net/an-trung-khi-mac-sot-xuat-huyet-co-anh-huong-tieu-hoa-4860513.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Có nên cho trẻ ăn trứng khi mắc sốt xuất huyết không?",
-    "answers": [
-      {
-        "text": "Có, nhưng chỉ khi trẻ không sốt cao.",
-        "correct": true
-      },
-      {
-        "text": "Không, tuyệt đối không nên cho ăn.",
-        "correct": false
-      },
-      {
-        "text": "Có, trẻ có thể ăn bất kỳ lúc nào.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ăn trứng sống.",
         "correct": false
       }
     ]
@@ -4494,33 +4494,6 @@
       },
       {
         "text": "Chuyển hồ sơ sang cơ quan điều tra khác.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bộ Giáo dục Mỹ từng bước bị xóa bỏ: Công việc của bộ này sẽ như thế nào?",
-    "content": "Bộ Giáo dục Mỹ đang tiến hành cắt giảm gần 50% nhân sự theo chỉ đạo của Tổng thống Donald Trump nhằm từng bước xóa bỏ bộ này. Khoảng 1.300 nhân viên sẽ bị sa thải, và nhiều văn phòng của bộ sẽ bị đóng cửa hoặc hợp nhất. Bộ trưởng Linda McMahon khẳng định rằng việc chuyển giao nhiệm vụ của Bộ Giáo dục sang các bộ khác sẽ giúp công việc được thực hiện hiệu quả hơn, mặc dù điều này đang gây lo ngại về chất lượng dịch vụ giáo dục cho hàng triệu học sinh, sinh viên Mỹ.",
-    "link": "https://dantri.com.vn/giao-duc/bo-giao-duc-my-tung-buoc-bi-xoa-bo-cong-viec-cua-bo-nay-se-nhu-the-nao-20250312144022671.htm",
-    "cat": "giao-duc",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Bộ Giáo dục Mỹ đang có kế hoạch gì trong thời gian tới?",
-    "answers": [
-      {
-        "text": "Cắt giảm nhân sự và từng bước xóa bỏ bộ này",
-        "correct": true
-      },
-      {
-        "text": "Mở rộng quy mô và tăng thêm nhân sự",
-        "correct": false
-      },
-      {
-        "text": "Xây dựng thêm nhiều văn phòng mới",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường chương trình hỗ trợ tài chính cho sinh viên",
         "correct": false
       }
     ]
